--- a/configs/al/minknet/syn2poss.yaml
+++ b/configs/al/minknet/syn2poss.yaml
@@ -3,7 +3,7 @@ MODALITY: 'voxel'
 DATA:
     DATASET: 'semanticposs'
     PETRELOSS_CONFIG: None
-    DATA_PATH: 'data_root/SemanticPOSS/sequences/'
+    DATA_PATH: '/data/rxm210041/data_root/SemanticPOSS/sequences/'
     VOXEL_SIZE: 0.05
     AUGMENT: 'GlobalAugment'
     NUM_POINTS: 1000000
@@ -11,7 +11,7 @@ DATA:
     TTA: False
     NUM_CLASSES: 13
     TARGET: 'poss'
-    TARGET_PATH: 'data_root/SemanticPOSS/sequences/'
+    TARGET_PATH: '/data/rxm210041/data_root/SemanticPOSS/sequences/'
 
 MODEL:
     NAME: MinkNet
@@ -26,8 +26,8 @@ MODEL:
     IF_DIST: False
 
 OPTIM:
-    BATCH_SIZE_PER_GPU: 16
-    NUM_EPOCHS: 50
+    BATCH_SIZE_PER_GPU: 4
+    NUM_EPOCHS: 60
     OPTIMIZER: sgd
     LR_PER_SAMPLE: 0.01
     WEIGHT_DECAY: 0.0001
@@ -38,11 +38,11 @@ OPTIM:
     WARMUP_EPOCH: 1
 
 ACTIVE:
-    ACTIVE_METHOD: 'VCD'  # choices: [VCD, Random, Entropy, Margin]
+    ACTIVE_METHOD: 'Entropy'  # choices: [VCD, Random, Entropy, Margin, OEM]
     SELECT_METHOD: 'voxel'
-    VOXEL_SELECT_METHOD: 'max'
+    VOXEL_SELECT_METHOD: 'mean'
     ACTIVE_FREQUENCY: 3
-    ACTIVE_TIMES: 5
+    ACTIVE_TIMES: 6
     SELECT_NUM: 1
     ACTIVE_VOXEL_SIZE: 0.25
     MAX_POINT_PER_VOXEL: 100
