--- a/configs/al/spvcnn/kitti2nus.yaml
+++ b/configs/al/spvcnn/kitti2nus.yaml
@@ -3,7 +3,7 @@ MODALITY: 'voxel'
 DATA:
     DATASET: 'nuscenes'
     PETRELOSS_CONFIG: None
-    DATA_PATH: 'data_root/nuScenes'
+    DATA_PATH: '/data/rxm210041/data_root/nuScenes'
     VOXEL_SIZE: 0.05
     AUGMENT: 'GlobalAugment'
     NUM_POINTS: 1000000
@@ -11,7 +11,7 @@ DATA:
     TTA: False
     NUM_CLASSES: 7
     TARGET: 'nus'
-    TARGET_PATH: 'data_root/nuScenes'
+    TARGET_PATH: '/data/rxm210041/data_root/nuScenes'
 
 MODEL:
     NAME: SPVCNN
