--- a/configs/fully/minknet/kitti2nus_src.yaml
+++ b/configs/fully/minknet/kitti2nus_src.yaml
@@ -3,7 +3,7 @@ MODALITY: 'voxel'
 DATA:
     DATASET: 'semantickitti'
     PETRELOSS_CONFIG: None
-    DATA_PATH: 'data_root/SemanticKITTI/sequences/'
+    DATA_PATH: '/data/rxm210041/data_root/SemanticKITTI/sequences/'
     VOXEL_SIZE: 0.05
     AUGMENT: 'GlobalAugment'
     NUM_POINTS: 1000000
@@ -11,7 +11,7 @@ DATA:
     TTA: False
     NUM_CLASSES: 7
     TARGET: 'nus'
-    TARGET_PATH: 'data_root/nuScenes/'
+    TARGET_PATH: '/data/rxm210041/data_root/nuScenes/'
 
 MODEL:
     NAME: MinkNet
@@ -26,7 +26,7 @@ MODEL:
     IF_DIST: False
 
 OPTIM:
-    BATCH_SIZE_PER_GPU: 16
+    BATCH_SIZE_PER_GPU: 8
     NUM_EPOCHS: 10
     OPTIMIZER: sgd
     LR_PER_SAMPLE: 0.01
