--- a/configs/fully/minknet/syn2poss_src.yaml
+++ b/configs/fully/minknet/syn2poss_src.yaml
@@ -3,7 +3,7 @@ MODALITY: 'voxel'
 DATA:
     DATASET: 'synlidar'
     PETRELOSS_CONFIG: None
-    DATA_PATH: 'data_root/Synlidar/sequences/'
+    DATA_PATH: '/data/rxm210041/data_root/Synlidar/sequences/'
     VOXEL_SIZE: 0.05
     AUGMENT: 'GlobalAugment'
     NUM_POINTS: 1000000
@@ -11,7 +11,7 @@ DATA:
     TTA: False
     NUM_CLASSES: 13
     TARGET: 'poss'
-    TARGET_PATH: 'data_root/SemanticPOSS/sequences/'
+    TARGET_PATH: '/data/rxm210041/data_root/SemanticPOSS/sequences/'
 
 MODEL:
     NAME: MinkNet
@@ -26,7 +26,7 @@ MODEL:
     IF_DIST: False
 
 OPTIM:
-    BATCH_SIZE_PER_GPU: 16
+    BATCH_SIZE_PER_GPU: 8
     NUM_EPOCHS: 10
     OPTIMIZER: sgd
     LR_PER_SAMPLE: 0.01
@@ -40,4 +40,4 @@ OPTIM:
 WANDB:
     USE_WANDB: False
     PROJECT_NAME: 'annotator'
-    ENTITY_NAME: $USERNAME
+    ENTITY_NAME: data-efficient-lab
